estulos.css agregado

--- a/Html/selector_universal.html
+++ b/Html/selector_universal.html
@@ -3,8 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Untitled Document</title>
+    <link rel="stylesheet" href="../Css/estilos.css">
 </head>
 <body>
+<div class="principal">
 <h2>Funciones selesctores</h2>
+<p>en esta pagina web presentam</p>
+</div>
 </body>
 </html>
