Selector desendiente selector clase

--- a/Html/selector_universal.html
+++ b/Html/selector_universal.html
@@ -7,8 +7,8 @@
 </head>
 <body>
 <div class="principal">
-<h2>Funciones selesctores</h2>
-<p>en esta pagina web presentam</p>
+<h2>Funciones selectores</h2>
+<p>en esta pagina web presentamos todos los selectores basicos que se utilizan en estilos css</p>
 </div>
 </body>
 </html>
