selector id y selectores descendentes combinados.

--- a/Html/selector_universal.html
+++ b/Html/selector_universal.html
@@ -9,6 +9,12 @@
 <div class="principal">
 <h2>Funciones selectores</h2>
 <p>en esta pagina web presentamos todos los selectores basicos que se utilizan en estilos css</p>
+<div id="textos">
+    <label>Usuario: </label>
+    <input type="text">
+    <label>Contraseña: </label>
+    <input type="password">
+</div>
 </div>
 </body>
 </html>
