--- a/Html/selector_universal.html
+++ b/Html/selector_universal.html
@@ -7,14 +7,28 @@
 </head>
 <body>
 <div class="principal">
-<h2>Funciones selectores</h2>
+<h2>BIENVENIDO A MI SISTEMA</h2>
 <p>en esta pagina web presentamos todos los selectores basicos que se utilizan en estilos css</p>
 <div id="textos">
     <label>Usuario: </label>
     <input type="text">
     <label>Contraseña: </label>
     <input type="password">
+    <a href="">olcidast tu contraseña</a>
+    <a href="">registrese</a>
+    <input type="submit" value="ingresar">
 </div>
 </div>
+<footer>
+    <h6>esta pagina tiene derechos reservados<a href="">| desarrolloweb.com</a></h6>
+    <div>
+       <a href="">jhsahgduycguidjkjkh</a>
+        <p>informacion</p>
+        <p>informacion</p>
+        <p>informacion</p>
+        <p>informacion</p>
+        <p>informacion</p>
+    </div>
+</footer>
 </body>
 </html>
