--- a/Html/selector_universal.html
+++ b/Html/selector_universal.html
@@ -24,9 +24,9 @@
     <div>
         <h4></h4>
         <p>informacion</p>
-        <p>informacion</p>
-        <p>informacion</p>
-        <p>informacion</p>
+        <p>Terminos y condiciones</p>
+        <p>desarrolladores</p>
+        <p>mas</p>
     </div>
 </footer>
 </body>
