--- a/Html/selector_universal.html
+++ b/Html/selector_universal.html
@@ -14,8 +14,8 @@
     <input type="text">
     <label>Contraseña: </label>
     <input type="password">
-    <a href="">olcidast tu contraseña</a>
-    <a href="">registrese</a>
+    <a href="" class="olvidar">olcidaste tu contraseña</a>
+    <a href="" class="registro">registrese</a>
     <input type="submit" value="ingresar">
 </div>
 </div>
