--- a/Html/selector_universal.html
+++ b/Html/selector_universal.html
@@ -8,6 +8,7 @@
 <body>
 <div class="principal">
 <h2>BIENVENIDO A MI SISTEMA</h2>
+<h3 class="nombre admin">Alis Huamanta Edquen</h3>
 <p>en esta pagina web presentamos todos los selectores basicos que se utilizan en estilos css</p>
 <div id="textos">
     <label>Usuario: </label>
@@ -17,6 +18,7 @@
     <a href="">olcidaste tu contraseña</a>
     <a href="registro">registrese</a>
     <input type="submit" value="ingresar">
+    <h3 class="nombre gacias">gracias por usar mi sistema</h3>
 </div>
 </div>
 <footer>
