--- a/Html/selector_universal.html
+++ b/Html/selector_universal.html
@@ -16,7 +16,7 @@
     <input type="text">
     <label>Contraseña: </label>
     <input type="password">
-    <a href="">olcidaste tu contraseña</a>
+    <a href="https://github.com/">olcidaste tu contraseña</a>
     <a href="registro">registrese</a>
     <input type="submit" value="ingresar">
     <h5 class="nombre gacias">gracias por usar mi sistema</h5>
