--- a/Html/selector_universal.html
+++ b/Html/selector_universal.html
@@ -23,7 +23,7 @@
 </div>
 </div>
 <footer>
-    <h6>esta pagina tiene derechos reservados<a href="">| desarrolloweb.com</a></h6>
+    <h6>esta pagina tiene derechos reservados<a href="http://upeu.edu.pe"> | desarrolloweb.com</a></h6>
     <div>
         <h4></h4>
         <p>informacion</p>
