--- a/Html/selector_universal.html
+++ b/Html/selector_universal.html
@@ -10,7 +10,7 @@
 <h2>BIENVENIDO A MI SISTEMA</h2>
 <h5 class="nombre propiet">Alis Huamanta Edquen</h5>
 <h5 class="nombre-admin">Administrador</h5>
-<p>en esta pagina web presentamos todos los selectores basicos que se utilizan en estilos css</p>
+<p >en esta pagina web presentamos todos los selectores basicos que se utilizan en estilos css</p>
 <div id="textos">
     <label>Usuario: </label>
     <input type="text">
@@ -26,10 +26,10 @@
     <h6>esta pagina tiene derechos reservados<a href="http://upeu.edu.pe"> | desarrolloweb.com</a></h6>
     <div>
         <h4></h4>
-        <p>informacion</p>
-        <p>Terminos y condiciones</p>
-        <p>desarrolladores</p>
-        <p>mas</p>
+        <p title="footer 1">informacion</p>
+        <p title="footer 2">Terminos y condiciones</p>
+        <p title="footer 3">desarrolladores</p>
+        <p title="footer 4">mas</p>
     </div>
 </footer>
 </body>
